# dbt-northwind

./: .gitignore  README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: sales.sql
northwind/models/raw/crm/: raw_crm__region.sql  raw_crm__territory.sql
northwind/models/staging/: _stg__models.yml  _stg__sources.yml  stg_customers.sql  stg_orders.sql
northwind/models/staging/crm/: stg_crm__region.sql  stg_crm__territory.sql
northwind/seeds/: region.csv
