[tool.poetry]
name = "dbt-northwind"
version = "0.1.0"
description = ""
authors = ["Matheus Gentil <matheusvgentil@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-postgres = "^1.9.0"
dbt-core = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
